# telegram-uploader

./: .OSPS_TEST_PRACTICE.md.kate-swp  .env.example  .gitignore  .gitmodules  .importlinter  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  STEP_BY_STEP_IMPLEMENTATION_GUIDE.md  docker-compose.yml  pyproject.toml
docs/: AI_AGENT_SKILLS.md  AI_REFACTOR_RULES.md  BACKLOG.md  BACKUPVAULT_IMPLEMENTATION.md  CLIENT_API_SETUP.md  INTERNAL_SPEC.md  NEXT_SESSION.md  ONION_ARCHITECTURE.md  ONION_LAYER_IMPLEMENTATION.md  PROJECT.md  SOLID_AUDIT.md  TELEGRAM_CLIENT_API_MIGRATION.md  TELEGRAM_SETUP.md  TODO.md
packaging/: nfpm.yaml
scripts/: build_deb.sh  check_release_version.sh  read_version.sh  run.sh  telegram_client_spike.py
src/: IMPLEMENTATION_GUIDE.md
tests/: conftest.py  test_archive_pipeline.py  test_backend_receiver.py  test_backup_idempotency.py  test_bootstrap_wiring.py  test_celery_task_queue.py  test_celery_workers.py  test_config_logging.py  test_domain.py  test_env_store.py  test_facade.py  test_gui_messages.py  test_layer_boundaries.py  test_logging_setup.py  test_manage_source_item.py  test_migrate_unit.py  test_provider_contract.py  test_public_api.py  test_repositories.py  test_repositories_integration.py  test_repositories_loading.py  test_restore_dest_path.py  test_restore_preflight_messages.py  test_restore_refs.py  test_restore_scope_and_progress.py  test_restore_session_log.py  test_session_path.py  test_seven_zip_service.py  test_smoke.py  test_telegram_client_integration.py  test_telegram_client_provider.py  test_telegram_multipart.py  test_telegram_provider.py  test_test_client_api.py  test_use_cases_backup.py  test_worker_tasks.py  (+3 more)
(+159 files in other folders)
